Добавляет геометрия страница портфолио

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button type="button" class="button">Замовити послугу</button>
+        <button type="button" class="button primary">Замовити послугу</button>
       </section>
 
       <!--Features-->
