--- a/portfolio.html
+++ b/portfolio.html
@@ -17,21 +17,21 @@
   </head>
   <body>
     <!--Шапка сайту-->
-    <header>
-      <div class="container">
-        <nav>
+    <header class="header">
+      <div class="container main-nav">
+        <nav class="nav">
           <a href="./index.html" class="logo">
             <span class="logo-first">Web</span><span class="logo-second">Studio</span>
           </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студія</a></li>
-            <li><a href="Портфоліо" class="link current">Портфоліо</a></li>
-            <li><a href="Контакти" class="link">Контакти</a></li>
+            <li class="item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="item"><a href="Портфоліо" class="link current">Портфоліо</a></li>
+            <li class="item"><a href="Контакти" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav list">
-          <li><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -41,19 +41,19 @@
         <div class="container">
           <h1 class="title-none">Портфоліо</h1>
           <ul class="button list">
-            <li><button type="button" class="button secondary">Усі</button></li>
-            <li><button type="button" class="button secondary">Веб-сайти</button></li>
-            <li><button type="button" class="button secondary">Додатки</button></li>
-            <li><button type="button" class="button secondary">Дизайн</button></li>
-            <li><button type="button" class="button secondary">Маркетинг</button></li>
+            <li class="item"><button type="button" class="button secondary">Усі</button></li>
+            <li class="item"><button type="button" class="button secondary">Веб-сайти</button></li>
+            <li class="item"><button type="button" class="button secondary">Додатки</button></li>
+            <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
+            <li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
           </ul>
           <ul class="projects list">
-            <li>
+            <li class="projects item">
               <img src="./images/technocrack.jpg" alt="technocrack" width="370" height="294" />
               <h2 class="title">Технокряк</h2>
               <p class="text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="projects item">
               <img
                 src="./images/posternewstar.jpg"
                 alt="Постер New Orlean vs Golden Star"
@@ -63,7 +63,7 @@
               <h2 class="title">Постер New Orlean vs Golden Star</h2>
               <p class="text">Дизайн</p>
             </li>
-            <li>
+            <li class="projects item">
               <img
                 src="./images/restaurantseafood.jpg"
                 alt="Ресторан Seafood"
@@ -73,17 +73,17 @@
               <h2 class="title">Ресторан Seafood</h2>
               <p class="text">Додаток</p>
             </li>
-            <li>
+            <li class="projects item">
               <img src="./images/projectprime.jpg" alt="Проєкт Prime" width="370" height="294" />
-              <h3>Проєкт Prime</h3>
+              <h2 class="title">Проєкт Prime</h2>
               <p class="text">Маркетинг</p>
             </li>
-            <li>
+            <li class="projects item">
               <img src="./images/projectboxes.jpg" alt="Проєкт Boxes" width="370" height="294" />
               <h2 class="title">Проєкт Boxes</h2>
               <p class="text">Додаток</p>
             </li>
-            <li>
+            <li class="projects item">
               <img
                 src="./images/inspiration.jpg"
                 alt="Inspiration has no Borders"
@@ -93,7 +93,7 @@
               <h2 class="title">Inspiration has no Borders</h2>
               <p class="text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="projects item">
               <img
                 src="./images/limitededition.jpg"
                 alt="Видання Limited Edition"
@@ -103,12 +103,12 @@
               <h2 class="title">Видання Limited Edition</h2>
               <p class="text">Дизайн</p>
             </li>
-            <li>
+            <li class="projects item">
               <img src="./images/projectlab.jpg" alt="Проєкт LAB" width="370" height="294" />
-              <h3>Проєкт LAB</h3>
+              <h2 class="title">Проєкт LAB</h2>
               <p class="text">Маркетинг</p>
             </li>
-            <li>
+            <li class="projects item">
               <img
                 src="./images/growingbusiness.jpg"
                 alt="Growing Business"
