Редактирование геометрии хедер, футер, проекты

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,100 +39,125 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="title-none">Портфоліо</h1>
-          <ul class="button list">
-            <li class="item"><button type="button" class="button secondary">Усі</button></li>
-            <li class="item"><button type="button" class="button secondary">Веб-сайти</button></li>
-            <li class="item"><button type="button" class="button secondary">Додатки</button></li>
-            <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
-            <li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
-          </ul>
-          <ul class="projects list">
-            <li class="projects item">
-              <img src="./images/technocrack.jpg" alt="technocrack" width="370" height="294" />
-              <h2 class="title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
-            </li>
-            <li class="projects item">
-              <img
-                src="./images/posternewstar.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p class="text">Дизайн</p>
-            </li>
-            <li class="projects item">
-              <img
-                src="./images/restaurantseafood.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="text">Додаток</p>
-            </li>
-            <li class="projects item">
-              <img src="./images/projectprime.jpg" alt="Проєкт Prime" width="370" height="294" />
-              <h2 class="title">Проєкт Prime</h2>
-              <p class="text">Маркетинг</p>
-            </li>
-            <li class="projects item">
-              <img src="./images/projectboxes.jpg" alt="Проєкт Boxes" width="370" height="294" />
-              <h2 class="title">Проєкт Boxes</h2>
-              <p class="text">Додаток</p>
-            </li>
-            <li class="projects item">
-              <img
-                src="./images/inspiration.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
-            </li>
-            <li class="projects item">
-              <img
-                src="./images/limitededition.jpg"
-                alt="Видання Limited Edition"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Видання Limited Edition</h2>
-              <p class="text">Дизайн</p>
-            </li>
-            <li class="projects item">
-              <img src="./images/projectlab.jpg" alt="Проєкт LAB" width="370" height="294" />
-              <h2 class="title">Проєкт LAB</h2>
-              <p class="text">Маркетинг</p>
-            </li>
-            <li class="projects item">
-              <img
-                src="./images/growingbusiness.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Growing Business</h2>
-              <p class="text">Додаток</p>
-            </li>
-          </ul>
+          <div class="portfolio-collection">
+            <h1 class="title-none">Портфоліо</h1>
+            <ul class="button list">
+              <li class="item"><button type="button" class="button secondary">Усі</button></li>
+              <li class="item">
+                <button type="button" class="button secondary">Веб-сайти</button>
+              </li>
+              <li class="item"><button type="button" class="button secondary">Додатки</button></li>
+              <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
+              <li class="item">
+                <button type="button" class="button secondary">Маркетинг</button>
+              </li>
+            </ul>
+            <ul class="projects list">
+              <li class="projects item">
+                <img src="./images/technocrack.jpg" alt="technocrack" width="370" height="294" />
+                <div class="collection-name">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img
+                  src="./images/posternewstar.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="collection-name">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img
+                  src="./images/restaurantseafood.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="collection-name">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img src="./images/projectprime.jpg" alt="Проєкт Prime" width="370" height="294" />
+                <div class="collection-name">
+                  <h2 class="title">Проєкт Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img src="./images/projectboxes.jpg" alt="Проєкт Boxes" width="370" height="294" />
+                <div class="collection-name">
+                  <h2 class="title">Проєкт Boxes</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="collection-name">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img
+                  src="./images/limitededition.jpg"
+                  alt="Видання Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="collection-name">
+                  <h2 class="title">Видання Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img src="./images/projectlab.jpg" alt="Проєкт LAB" width="370" height="294" />
+                <div class="collection-name">
+                  <h2 class="title">Проєкт LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </li>
+              <li class="projects item">
+                <img
+                  src="./images/growingbusiness.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="collection-name">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
 
+    <!--Footer-->
     <footer>
       <div class="footer">
         <div class="container">
           <a href="./index.html" class="logo">
             <span class="logo-first">Web</span><span class="logo-third">Studio</span>
           </a>
-          <!--Контакти-->
-          <address>
-            <ul class="list">
-              <li>
+          <!--Contacts-->
+          <address class="contacts">
+            <ul class="contacts list">
+              <li class="item">
                 <a
                   href="https://goo.gl/maps/4yeFiKxMRU1gBtnu8"
                   target="_blank"
@@ -141,8 +166,8 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li><a href="" class="connect">info@devstudio.com</a></li>
-              <li><a href="" class="connect">+38 096 111 11 11</a></li>
+              <li class="item"><a href="" class="connect">info@devstudio.com</a></li>
+              <li class="item"><a href="" class="connect">+38 096 111 11 11</a></li>
             </ul>
           </address>
         </div>
