--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
   <body>
     <!--Site nav-->
     <header class="header">
-      <div class="container main-nav">
-        <nav class="nav">
-          <a href="./index.html" class="logo">
-            <span class="logo-first">Web</span><span class="logo-second">Studio</span>
-          </a>
-          <ul class="site-nav list">
-            <li class="item"><a href="Студія" class="link current">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li class="item"><a href="Контакти" class="link">Контакти</a></li>
+      <section class="section site-nav">
+        <div class="container main-nav">
+          <nav class="nav">
+            <a href="./index.html" class="logo">
+              <span class="logo-first">Web</span><span class="logo-second">Studio</span>
+            </a>
+            <ul class="site-nav list">
+              <li class="item"><a href="Студія" class="link current">Студія</a></li>
+              <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+              <li class="item"><a href="Контакти" class="link">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="auth-nav list">
+            <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
           </ul>
-        </nav>
-        <ul class="auth-nav list">
-          <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
-      </div>
+        </div>
+      </section>
     </header>
 
     <main>
@@ -47,7 +49,7 @@
       </section>
 
       <!--Features-->
-      <section class="section">
+      <section class="section features">
         <div class="container">
           <h2 class="title-none">Особливості</h2>
           <ul class="features list">
@@ -78,7 +80,7 @@
       </section>
 
       <!--Work-->
-      <section class="section">
+      <section class="section works">
         <div class="container">
           <h2 class="title">Чим ми займаємося</h2>
           <ul class="work list">
