--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,28 @@
   <body>
     <!--Шапка сайту-->
     <header class="header">
-      <div class="container main-nav">
-        <nav class="nav">
-          <a href="./index.html" class="logo">
-            <span class="logo-first">Web</span><span class="logo-second">Studio</span>
-          </a>
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="Портфоліо" class="link current">Портфоліо</a></li>
-            <li class="item"><a href="Контакти" class="link">Контакти</a></li>
+      <section class="section site-nav">
+        <div class="container main-nav">
+          <nav class="nav">
+            <a href="./index.html" class="logo">
+              <span class="logo-first">Web</span><span class="logo-second">Studio</span>
+            </a>
+            <ul class="site-nav list">
+              <li class="item"><a href="./index.html" class="link">Студія</a></li>
+              <li class="item"><a href="Портфоліо" class="link current">Портфоліо</a></li>
+              <li class="item"><a href="Контакти" class="link">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="auth-nav list">
+            <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
           </ul>
-        </nav>
-        <ul class="auth-nav list">
-          <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
-      </div>
+        </div>
+      </section>
     </header>
 
     <main>
-      <section class="section">
+      <section class="section portfolio-collection">
         <div class="container">
           <div class="portfolio-collection">
             <h1 class="title-none">Портфоліо</h1>
